# UILO

./: .gitignore  CMakeLists.txt  FileBrowser.hpp  FileTree.hpp  Makefile  README.md  STYLE.md  THEMING.md  TODO.md  TODO.txt  UILO.cpp  UILO.hpp  UILO_NEW.md  WINDOWS_BUILD.md  bgfx_instructions.txt  build.bat  build.ps1  build.sh  checklist.md
assets/: EmbeddedAssets.hpp  EmbeddedIcons.hpp
cmake/: bgfxToolUtils.cmake
examples/: CMakeLists.txt  Info.plist  Makefile  UI.hpp  build.ps1  build.sh  containers.cpp  glass_trail_test.cpp  gradients.cpp  metal_basic.mm  page_switch_test.cpp  pixel_test.cpp  raylib_example.cpp  render_bench.cpp  sdl_basic.cpp  sdl_example.cpp  sfml_basic.cpp  sfml_example.cpp
include/: Common.hpp  Factory.hpp  Page.cpp  Page.hpp  Palette.cpp  Palette.hpp  UILO.cpp  UILO.hpp
include/elements/: Alignment.hpp  Bounds.hpp  Element.cpp  Element.hpp  Elements.hpp  Factory.hpp  Modifier.cpp  Modifier.hpp
include/elements/containers/: Canvas.cpp  Canvas.hpp  Column.cpp  Column.hpp  Container.cpp  Container.hpp  Row.cpp  Row.hpp
include/elements/decor/: Image.cpp  Image.hpp  Spacer.cpp  Spacer.hpp  Text.cpp  Text.hpp
include/elements/decoration/: Image.cpp  Image.hpp  Spacer.cpp  Spacer.hpp  Text.cpp  Text.hpp  Waveform.cpp  Waveform.hpp
include/elements/interactible/: Button.cpp  Button.hpp  Dropdown.cpp  Dropdown.hpp  Interactible.cpp  Interactible.hpp  Knob.cpp  Knob.hpp  Resizer.cpp  Resizer.hpp  Slider.cpp  Slider.hpp  Textbox.cpp  Textbox.hpp
include/graphics/: Color.hpp  Renderer.hpp  Shape.hpp  Vertex.hpp
include/input/: Input.hpp  Mouse.hpp
include/math/: Vec2.hpp
include/platform/: MacScroll.hpp  MacScroll.mm  MacStubs.cpp  MacWindow.hpp  MacWindow.mm
include/renderer/: Renderer.cpp  Renderer.cpp.bak  Renderer.hpp  RendererImpl.hpp  Renderer_Text.cpp  Renderer_Texture.cpp  Shapes.hpp  tex_shader_data.inc
include/renderer/shaders/: fs_blur.sc  fs_glass.sc  fs_solid.sc  fs_tex.sc  fs_text.sc  varying.def.sc  vs_solid.sc  vs_tex.sc
include/renderer/shapes/: Circle.hpp  Line.hpp  Rect.hpp  RoundedRect.hpp  Triangle.hpp
include/renderer_interfaces/: UILO_SDL.hpp  UILO_SFML.hpp
include/shapes/: Rect.hpp  Shape.hpp  Shapes.hpp  Vertex.hpp
include/utils/: Alignment.hpp  Color.cpp  Color.hpp  Dimension.hpp  Gradient.cpp  Gradient.hpp  Material.hpp  Math.hpp  RenderUtils.hpp  StateMachine.hpp  Timer.hpp  Types.hpp  Utils.hpp  Vec2.hpp
tests/: Makefile  containers.cpp  text.cpp
